# Geometry

./: .gitignore  Cargo.toml  eslint.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: jekyll-gh-pages.yml
server/: index.ts
src/: lib.rs
src/rust/pathfinding/: breadth_first_search.rs
src/ts/: get-data.ts  index.ts
src/ts/geometry/: types.ts
src/ts/pathfinding/: a-star-search.ts  a-star.ts  breadth-first-search-diagonal.ts  breadth-first-search.ts  index.ts
src/ts/utils/: debounce.ts  index.ts  number-to-point.ts  point-to-number.ts  shot-pixel-by-number.ts
src/ts/wasm/: index.ts  render.ts
static/: index.html
tests/: app.rs
wasm/: Cargo.toml
wasm/benches/: bencmark.rs
wasm/src/: lib.rs
wasm/src/pathfinding/: a_star_search.rs  breadth_first_search.rs  mod.rs
website/script/: index.ts
website/script/data/: field-1.ts  index.ts
website/script/geometry/: collisions.ts  conversions.ts  distances.ts  index.ts  merges.ts  transformations.ts  types.ts
website/script/pathfinding/: a-star.ts  breadth-first-search.ts  index.ts  ray-casting.ts
website/script/utils/: get-coordinates-by-mouse-event.ts  min-heap.ts  set-canvas-to-fullscreen.ts  shot-pixel-by-coords.ts
website/script/wasm/: index.ts  obstacles.ts
website/style/: grid.scss  index.scss
website/template/: index.html
