[package]
name = "rust-webpack-template"
description = "Geometry processing in Rust, compiled to WebAssembly, and bundled with Webpack."
version = "0.1.0"
authors = ["Nick Kravchenko <krava9519@gmail.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.95"
wee_alloc = { version = "0.4.5", optional = true }
console = "0.16.1"
chrono = "0.4.38"

[dependencies.web-sys]
version = "0.3.72"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
futures = "0.3.31"
js-sys = "0.3.72"
wasm-bindgen-futures = "0.4.45"
