[package]
name = "wasm"
version = "0.1.0"
authors = ["Mykola Kravchenko <mkravchenko@portmone.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = ["Window", "console"] }  # Remove the invalid feature
js-sys = "0.3"
wee_alloc = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
criterion = "0.4"
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
wasm-opt = false
lto = "fat"
debug = true
